Add detailed setup and configuration information

--- a/S3 & iRODS Throughput Tests.ipynb
+++ b/S3 & iRODS Throughput Tests.ipynb
@@ -1677,7 +1677,31 @@
    "metadata": {},
    "source": [
     "## <a name=\"config-s3\"></a>Setting up S3\n",
-    "This process requires you to have access to an S3 bucket for your testing. Take note of the name of your bucket and its region."
+    "This process requires you to have access to an S3 bucket for your testing. Take note of the name of your bucket and its region.\n",
+    "\n",
+    "Also make sure you have the access key and secret for your account on hand. You'll need these to interact with the AWS CLI and with the AWS S3 bucket through iRODS.\n",
+    "\n",
+    "Your bucket's configuration should conform to the following:\n",
+    "```\n",
+    "Block all public access\n",
+    "On\n",
+    "Block public access to buckets and objects granted through new access control lists (ACLs)\n",
+    "On\n",
+    "Block public access to buckets and objects granted through any access control lists (ACLs)\n",
+    "On\n",
+    "Block public access to buckets and objects granted through new public bucket or access point policies\n",
+    "On\n",
+    "Block public and cross-account access to buckets and objects through any public bucket or access point policies\n",
+    "On\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "Access for bucket owner\n",
+    "Canonical ID    List objects    Write objects   Read bucket permissions    Write bucket permissions\n",
+    "xxxxx (Your AWS account)        Yes     Yes     Yes     Yes\n",
+    "```\n",
+    "\n",
+    "Once your bucket is configured, you should test API access to it, either though the [AWS CLI](https://aws.amazon.com/cli/) tools or through a REST interface such as Postman."
    ]
   },
   {
@@ -1685,10 +1709,39 @@
    "metadata": {},
    "source": [
     "## <a name=\"config-irods\"></a>Setting up iRODS with S3\n",
-    "The following pages will offer a framework for setting up your configuration. Note that it's necessary to \n",
+    "The following pages offer a framework for setting up your configuration.\n",
     "\n",
     "- https://github.com/irods/irods_resource_plugin_s3\n",
-    "- https://irods.org/2019/09/irods-releases-cacheless-s3-resource-plugin/"
+    "- https://irods.org/2019/09/irods-releases-cacheless-s3-resource-plugin/\n",
+    "\n",
+    "Below is an example iRODS resource configuration that will work with the plugin. (This is duplicated from the S3 resource plugin GitHub for convenience.)\n",
+    "\n",
+    "Create the resource:\n",
+    "```\n",
+    "iadmin mkresc s3resc s3 $(hostname):/s3-irods-bucket-name/prefix/in/bucket \"S3_DEFAULT_HOSTNAME=s3.us-east-1.amazonaws.com;S3_AUTH_FILE=/var/lib/irods/s3.keypair;S3_REGIONNAME=us-east-1;S3_RETRY_COUNT=1;S3_WAIT_TIME_SEC=3;S3_PROTO=HTTP;ARCHIVE_NAMING_POLICY=consistent;HOST_MODE=cacheless_attached\"\n",
+    "```\n",
+    "\n",
+    "Check the configuration:\n",
+    "```\n",
+    "$ ilsresc s3resc\n",
+    "resource name: s3resc\n",
+    "id: 10017\n",
+    "zone: tempZone\n",
+    "type: s3\n",
+    "class: cache\n",
+    "location: irods3.example.org\n",
+    "vault: /s3-irods-bucket-name/prefix/in/bucket\n",
+    "free space:\n",
+    "free space time: : Never\n",
+    "status:\n",
+    "info:\n",
+    "comment:\n",
+    "create time: 01575329511: 2019-12-02.23:31:51\n",
+    "modify time: 01576687386: 2019-12-18.16:43:06\n",
+    "context: S3_DEFAULT_HOSTNAME=s3.us-east-1.amazonaws.com;S3_AUTH_FILE=/var/lib/irods/s3.keypair;S3_REGIONNAME=us-east-1;S3_RETRY_COUNT=1;S3_WAIT_TIME_SEC=3;S3_PROTO=HTTP;ARCHIVE_NAMING_POLICY=consistent;HOST_MODE=cacheless_attached\n",
+    "parent:\n",
+    "parent context:\n",
+    "```"
    ]
   },
   {
@@ -1699,10 +1752,17 @@
     "If you'd like to replicate or expand on the data in this notebook, you can use the script linked here:\n",
     "https://github.com/cyverse/irods-adm/blob/master/cyverse-throughput\n",
     "\n",
-    "Note that in order to test the scenarios presented above (or to run additional ones) the `irods_environment.json` will need to be adjusted accordingly, adding and removing iRODS resoruces as necessary.\n",
+    "Note that in order to test the scenarios presented above (or to run new/additional ones) the `irods_environment.json` will need to be adjusted accordingly, adding and removing iRODS resoruces as necessary.\n",
     "\n",
     "Testing performance with S3 alone can be made easier using the AWS CLI tools. https://aws.amazon.com/cli/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
